# apex-state

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENT_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONCERNS_ARCHITECTURE.md  CONCERNS_REFERENCE.md  INPUT.md  INPUT_v2.md  README.md  REFACTORING_EXAMPLE.md  TECHNICAL_DEBT.md  eslint.config.js  index.html  knip.jsonc  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.hive/: issues.jsonl
benchmarks/: OPTIMIZATION_SUMMARY.md  README.md  listener-changes-filtering.js  listener-filtering.js  no-op-filtering.js  sync-flip-paths.js
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: AGGREGATION_READ_DIRECTION.md  ARCHITECTURE_CONCERNS_CRITICAL.md  BENCHMARK_COMPARISON.md  BENCHMARK_JSON_SERIALIZATION.md  CLEAR_PATHS.md  CONSTRAINT_EXPRESSION_DESIGN_PROMPT.md  DEBUG_TIMING.md  DOCS_AUDIT.md  FORMULA_ENGINE.md  GRAPHOLOGY_REPLACEMENT.md  IMPLEMENTATION_COMPLETE.md  INPUT.md  INPUT_v2.md  INPUT_v3.md  INPUT_v4.md  INPUT_v5.md  INTEGRATION_TEST_MAP.md  INTERPOLATION.md  LISTENER_GROUPS_DESIGN.md  OPTIONS_LOGIC_ENGINE.md  P0_TEST_COVERAGE_REPORT.md  PROCESS_CHANGES_FLOW.md  REACTOR_ARCHITECTURE_PROPOSAL.md  README.md  RECORD_MIGRATION.md  REFACTORING_EXAMPLE.md  SERIALIZATION_OPTIMIZATION.md  SIDE_EFFECTS_GUIDE.md  TESTING_MOCK.md  TEST_CASES_INVENTORY.md  TEST_SCENARIOS.md  TYPE_SAFETY_PROPOSAL.md  USEFIELDCONCERNS_API.md  VALTIO_REACTIVE_ANALYSIS.md  VALUE_LOGIC_ENGINE.md  WASM_ARCHITECTURE.md  WASM_OPTIMIZATIONS.md  WASM_TEST_PLAN_PHASE1.md  WILDCARD_UTILITIES_EXAMPLE.md  WILD_FUNCTION_GUIDE.md  (+1 more)
examples/: basic-store.tsx  composable-hooks.tsx  concerns.tsx  interpolation.ts  side-effects.tsx  testing-mock.ts  wildcard-paths.ts
rust/: Cargo.toml
rust/src/: aggregation.rs  bool_logic.rs  boollogic.rs  change.rs  clear_paths.rs  computation.rs  diff.rs  functions.rs  graphs.rs  intern.rs  lib.rs  normalization.rs  pipeline.rs  prelude.rs  registry_helpers.rs  rev_index.rs  revdeps.rs  router.rs  shadow.rs  trace.rs  validator.rs  value_logic.rs
rust/tests/: bool_logic_test.rs
scripts/: generate-llms-txt.ts  generate-massive-json.ts
src/: App.tsx  index.ts  main.tsx
tasks/: 00-ARCHITECTURE-UPDATE.md  01-project-setup.md  (+46 more)
(+426 files in other folders)
