[package]
name = "apex-state-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
ts-rs = { version = "10", features = ["serde-json-impl"] }

# Optional but recommended for development
[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true

[dependencies.wee_alloc]
version = "0.4.2"
optional = true

[features]
default = ["console_error_panic_hook"]

[[bin]]
name = "ts-export"
path = "src/bin/ts_export.rs"
