[package]
name = "apex-state-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std", "serde", "compile-time-rng"] }
lasso = "0.7"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
smallvec = { version = "1.13", features = ["serde"] }
ts-rs = { version = "10", features = ["serde-json-impl"] }

# Optional but recommended for development
[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true

[features]
default = ["console_error_panic_hook"]

[[bin]]
name = "ts-export"
path = "src/bin/ts_export.rs"

[profile.release]
opt-level = 3         # speed-first; switch to "s" (~618KB, −10% speed) or "z" (~496KB, −22% speed) when bundle size matters
lto = true            # cross-crate dead code elimination
codegen-units = 1     # required for LTO; also yields better optimization
panic = "abort"       # drop panic formatting infrastructure

# build scripts run on the host, compile fast
[profile.release.build-override]
opt-level = 0
